<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/airport"
    tools:context=".MenuScreen">

    <TextView
        android:id="@+id/tvMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/menu"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/new_game"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMenu"
        app:rippleColor="#2196F3" />

    <Button
        android:id="@+id/btnOptions"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/options"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNewGame" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/help"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOptions" />
</androidx.constraintlayout.widget.ConstraintLayout>